--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,19 @@
 eth/node_modules/
 front/node_modules/
+
+# testing
+front/coverage
+
+# production
+front/build
+
+# misc
+front/.DS_Store
+front/.env.local
+front/.env.development.local
+front/.env.test.local
+front/.env.production.local
+
+front/npm-debug.log*
+front/yarn-debug.log*
+front/yarn-error.log*
